test/conformance/kuttl/generate/clusterpolicy/cornercases/clone-role-and-rolebinding/03-assert.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: ns-role
  namespace: generate-clone-role-tests
rules:
- apiGroups:
  - ""
  resources:
  - configmaps
  verbs:
  - get
  - watch
  - list
  - delete
  - create
---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: ns-role-binding
  namespace: generate-clone-role-tests
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: Role
  name: ns-role
subjects:
- apiGroup: rbac.authorization.k8s.io
  kind: User
  name: minikube-userclone
